gccida/c0/cselib_record_sets
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_record_sets/src/cselib.c:1700:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v2; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_record_sets/src/cselib.c:1708:1: error: use of undeclared identifier 'set_0'
set_0 sets[106]; // [rsp+30h] [rbp-D50h] BYREF 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_record_sets/src/cselib.c:1716:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
body = ( rtx)insn[2]; 
             ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_record_sets/src/cselib.c:1720:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
body = ( rtx)body[1]; 
             ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_record_sets/src/cselib.c:1724:1: error: use of undeclared identifier 'sets'
sets[0].src = ( rtx)body[1]; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_record_sets/src/cselib.c:1724:21: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
sets[0].src = ( rtx)body[1]; 
                    ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_record_sets/src/cselib.c:1725:1: error: use of undeclared identifier 'sets'
sets[0].dest = body->fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_record_sets/src/cselib.c:1735:1: error: use of undeclared identifier 'sets'
sets[n_sets].src = ( rtx)x[1]; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_record_sets/src/cselib.c:1735:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
sets[n_sets].src = ( rtx)x[1]; 
                         ^~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_record_sets/src/cselib.c:1736:1: error: use of undeclared identifier 'sets'
sets[n_sets++].dest = x->fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_record_sets/src/cselib.c:1742:8: error: use of undeclared identifier 'sets'
dest = sets[i].dest; 
       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_record_sets/src/cselib.c:1746:1: error: use of undeclared identifier 'sets'
sets[i].dest = dest; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_record_sets/src/cselib.c:1750:7: error: use of undeclared identifier 'sets'
src = sets[i].src; 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_record_sets/src/cselib.c:1752:40: error: use of undeclared identifier 'machine_mode'
src = gen_rtx_fmt_eee( IF_THEN_ELSE, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)src), cond, src, dest); 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_record_sets/src/cselib.c:1752:55: error: expected expression
src = gen_rtx_fmt_eee( IF_THEN_ELSE, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)src), cond, src, dest); 
                                                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_record_sets/src/cselib.c:1753:28: error: use of undeclared identifier 'machine_mode'
v1 = cselib_lookup( src, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)dest), 1); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_record_sets/src/cselib.c:1753:43: error: expected expression
v1 = cselib_lookup( src, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)dest), 1); 
                                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_record_sets/src/cselib.c:1754:1: error: use of undeclared identifier 'sets'
sets[i].src_elt = v1; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_record_sets/src/cselib.c:1761:1: error: use of undeclared identifier 'sets'
sets[i].dest_addr_elt = v3; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_record_sets/src/obj/cselib.o] Error 1
